@@ -1,3 +1,10 @@
+2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/plot/Marker.java
+	(readObject): Initialise listener list,
+	* tests/org/jfree/chart/plot/junit/ValueMarkerTests.java
+	(test1802195): New test method.
+
 2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
